# klondike-solitaire

./: .gitignore  CMakeLists.txt
src/: Solitaire.cpp  main.cpp
